cluster/flux-system/np-default-deny.yaml
# Default deny all ingress and egress traffic in the namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: stac
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
